CI: enable annot. processing