@@ -28,23 +28,22 @@ additional
 
     <properties>
         <maven.compiler.release>23</maven.compiler.release>
-        <maven.compiler.arg>-parameters</maven.compiler.arg>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <spring-boot.version>3.3.5</spring-boot.version>
-        
+
         <causeway.version>3.0.0-SNAPSHOT</causeway.version>
         <causewaystuff.version>1.0.0-SNAPSHOT</causewaystuff.version>
 
         <indriya.version>2.2</indriya.version>
-        
+
         <lombok.version>1.18.36</lombok.version>
 
         <mariadb-jdbc.version>3.3.2</mariadb-jdbc.version>
         <mssql-jdbc.version>12.4.2.jre11</mssql-jdbc.version>
-        
-        <owlapi.version>5.5.0</owlapi.version>           
-        
+
+        <owlapi.version>5.5.0</owlapi.version>
+
         <!-- testing -->
         <junit.version>5.11.0</junit.version>
         <surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
@@ -96,6 +95,10 @@ additional
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                    <parameters>true</parameters>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
